--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
 body {
   text-align: center;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #333;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 3px;
 }
 
 code {
@@ -14,4 +13,5 @@ code {
 }
 img {
   border-radius: 50%;
+  border: 6px solid white;
 }
