--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   margin: 0;
-  background-color: #333;
+  background-color: #111;
   color: white;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 3px;
@@ -13,5 +13,5 @@ code {
 }
 img {
   border-radius: 50%;
-  border: 6px solid white;
+  border: 6px solid yellow;
 }
